; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_user_filters.c_get_desc_from.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_user_filters.c_get_desc_from.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_user_filter_entry = type { %struct.m_obj_desc }
%struct.m_obj_desc = type { %struct.mp_user_filter_entry* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_user_filter_entry**, i32, %struct.m_obj_desc*, i32)* @get_desc_from to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_desc_from(%struct.mp_user_filter_entry** %0, i32 %1, %struct.m_obj_desc* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.mp_user_filter_entry**, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.m_obj_desc*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.mp_user_filter_entry*, align 8
  store %struct.mp_user_filter_entry** %0, %struct.mp_user_filter_entry*** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.m_obj_desc* %2, %struct.m_obj_desc** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp sge i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %29

15:                                               ; preds = %4
  %16 = load %struct.mp_user_filter_entry**, %struct.mp_user_filter_entry*** %6, align 8
  %17 = load i32, i32* %9, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.mp_user_filter_entry*, %struct.mp_user_filter_entry** %16, i64 %18
  %20 = load %struct.mp_user_filter_entry*, %struct.mp_user_filter_entry** %19, align 8
  store %struct.mp_user_filter_entry* %20, %struct.mp_user_filter_entry** %10, align 8
  %21 = load %struct.m_obj_desc*, %struct.m_obj_desc** %8, align 8
  %22 = load %struct.mp_user_filter_entry*, %struct.mp_user_filter_entry** %10, align 8
  %23 = getelementptr inbounds %struct.mp_user_filter_entry, %struct.mp_user_filter_entry* %22, i32 0, i32 0
  %24 = bitcast %struct.m_obj_desc* %21 to i8*
  %25 = bitcast %struct.m_obj_desc* %23 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %24, i8* align 8 %25, i64 8, i1 false)
  %26 = load %struct.mp_user_filter_entry*, %struct.mp_user_filter_entry** %10, align 8
  %27 = load %struct.m_obj_desc*, %struct.m_obj_desc** %8, align 8
  %28 = getelementptr inbounds %struct.m_obj_desc, %struct.m_obj_desc* %27, i32 0, i32 0
  store %struct.mp_user_filter_entry* %26, %struct.mp_user_filter_entry** %28, align 8
  store i32 1, i32* %5, align 4
  br label %29

29:                                               ; preds = %15, %14
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
